Fix center alignment of logo images

--- a/static/sass/_patterns_logo-list.scss
+++ b/static/sass/_patterns_logo-list.scss
@@ -20,6 +20,10 @@
       @media screen and (min-width: $breakpoint-small) {
         width: 15.04854%; // col-2
       }
+
+      img {
+        align-self: auto; // override vanilla default align-self: flex-start
+      }
     }
   }
 }
